# Lost_Found_book

./: .gitignore  Data_report.json  README_OCR_PROCESSOR.md  batch_ocr_processor.py  benchmark.py  build_ocr_trt.py  build_trt_engines.sh  claude.md  detect_crop_ocr.py  e2e_results_process.py  final_processor.py  final_results.json  main.py  pair_results.csv  processData.py  run_yolo.sh  simple_ocr_demo.py  verify_model.sh
e2e_results/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  system_results.txt
logic/: benchmark_batch.py  data_gen.py  evaluate.py  inference.py  train.py  train_large.py
logic/models/: dataset.py  utils.py
models/: README.md
models/ocr/: TensorrtExecutionProvider_TRTKernel_graph_main_graph_16956259202314067831_0_0_fp16_sm87.profile  TensorrtExecutionProvider_TRTKernel_graph_main_graph_9620267598828046825_0_0_fp16_sm87.profile
modules/: __init__.py  cv_mock.py  vision_pipeline.py
modules/logic/: __init__.py  benchmark_batch.py  comparator.py  data_gen.py  dataset.py  e2e_test.py  evaluate.py  inference.py  tokenizer.py  train_lstm.py  utils.py
modules/vision/: __init__.py  ocr_wrapper.py  yolo_inference.py
openocr/tools/: infer_det.py  infer_rec.py
openocr/tools/infer/: onnx_engine.py  trt_engine.py
output/json/: 007_jpg.rf.c304efec512a0e2e71f3af8e4d3cd885.json
ros2_ws/: .expand_rootfs.sh  .robotrc  .typerc
ros2_ws/src/lost_book_bridge/: bridge.py  nav_mock.py  package.xml  photo_camera_node.py  setup.py  setup.sh  startup_script.sh
ros2_ws/src/lost_book_bridge/launch/: photo_camera_node.launch.py
(+137 files in other folders)
